# hipo_tools

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  .travis_build.sh  CMakeLists.txt  README.md  SConstruct  hipo_tools.Dockerfile
.circleci/: config.yml
cmake/: FindLZ4.cmake  FindPythonExtensions.cmake  HipoToolsConfig.cmake.in  os.cmake  root.cmake
docker/: Dockerfile  Dockerfile.base  Dockerfile.travis  base.Dockerfile
examples/: CMakeLists.txt  benchmark.cpp  hipo.cpp  hipopy_test.py  pulse_compression.cpp  read_event_file.cpp  read_file.cpp  read_file_advanced.cpp  write_file.cpp
examples/dst2root/: MonteCarlo.cxx  README.md  WvsQ2.cxx  deltat.cxx  pvsb.cxx  samplingFraction.cxx
examples/hipo3/: benchmark.cpp  hipo.cpp  hipopy_test.py  pulse_compression.cpp  read_event_file.cpp  read_file.cpp  read_file_advanced.cpp  text_to_cstr.py  write_file.cpp
examples/hipo4/: cant_read.cpp  clas12_event.py  clas12_speed.py  filter.cpp  readFileTags.cpp  read_hipo4_fortran.f90  show_hipo4_banks.py  test_hipo4.py  writeEvents.cxx
fortran/: Makefile  read_file.F
hipocpp/: CMakeLists.txt  hipocpp.pc.in
hipocpp/include/: dictionary.h
hipocpp/src/: node.cpp
libcpp/: data.h  event.cpp  record.cpp  text.cpp  utils.cpp  wrapper.cpp  writer.cpp
src/dst2root/: CMakeLists.txt  banks.json  constants.h  dst2root.cpp  dst2root_3.cpp
src/dst2root/include/: banks.h  clipp.h  constants.h
src/dst2root/src/: dst2root.cpp  dst2root_3.cpp
src/hipo-io/: CMakeLists.txt
src/hipo-io/src/: hipo.cxx
src/hipo2root/: CMakeLists.txt  banks.h  hipo2root.cpp  hipo2root3.cpp  make_hipo2root.py  recon2root.cpp
src/hipo2root/bankdefs/: mc_particle.json  rec_particle.json
src/hipocpp/: CMakeLists.txt
src/hipocpp/include/: LinkDef.h  utils.h
src/hipocpp/include/hipo/: event.h  node.h  reader.h  record.h  utils.h
src/hipocpp/src/: data.cpp  dictionary.cpp  node.cpp  reader.cpp  record.cpp  text.cpp  utils.cpp  wrapper.cpp  writer.cpp
src/hipocpp3/: CMakeLists.txt  hipocpp.pc.in
src/hipocpp3/include/hipo3/: event.h  reader.h  writer.h
src/hipocpp3/src/: data.cpp  dictionary.cpp  event.cpp  node.cpp  reader.cpp  record.cpp  text.cpp  utils.cpp  wrapper.cpp  writer.cpp
src/hipocpp4/: CMakeLists.txt  hipocpp.pc.in
src/hipocpp4/include/hipo4/: bank.h  dictionary.h  event.h  hipoexceptions.h  reader.h  record.h  recordbuilder.h  utils.h  writer.h
src/hipocpp4/src/: bank.cpp  dictionary.cpp  event.cpp  reader.cpp  record.cpp  recordbuilder.cpp  utils.cpp  wrapper.cpp  writer.cpp
src/hipopy/: CMakeLists.txt  Makefile  clas12.pyx  compare.py  dictionary.cpp  event.cpp  hipopy.pyx  hipopy3.pyx  hipopy4.pyx  node.cpp  physics.pyx  pylibhipo.pyx  reader.cpp  setup.py  test.py  utils.cpp
src/hipopy/hipo/: node.h  reader.h  record.h  text.h
src/recon2root/: CMakeLists.txt  recon2root.cpp  recon2root_mc.cpp
src/reconstructed2root/: make_hipo2root.py
src/split_clas12_root/: CMakeLists.txt
src/split_clas12_root/src/: split_clas12.cpp
src/tests/: CMakeLists.txt  pz_test.cpp
src/toohip4root/: CMakeLists.txt
src/toohip4root/include/: LinkDef.h  RHipoDS.hxx  THipo.h  THipoBank.h  THipoBankParser.h  THipoItem.h
src/toohip4root/src/: RHipoDS.cxx  THipo.cxx  THipoBank.cxx  THipoBankParser.cxx  THipoItem.cxx  toohip4root.cxx
